--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,9 @@ data/
 notes.txt
 removeme*.png
 
+# new default dump folder
+/dump
+
 # Byte-compiled / optimized / DLL files
 **/__pycache__/
 *.py[cod]
